; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-ipcomp.c_ipcomp_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-ipcomp.c_ipcomp_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipcomp = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"IPComp(cpi=0x%04x)\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"[|IPCOMP]\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipcomp_print(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.ipcomp*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = bitcast i32* %7 to %struct.ipcomp*
  store %struct.ipcomp* %8, %struct.ipcomp** %5, align 8
  %9 = load %struct.ipcomp*, %struct.ipcomp** %5, align 8
  %10 = getelementptr inbounds %struct.ipcomp, %struct.ipcomp* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @ND_TCHECK(i32 %11)
  %13 = load %struct.ipcomp*, %struct.ipcomp** %5, align 8
  %14 = getelementptr inbounds %struct.ipcomp, %struct.ipcomp* %13, i32 0, i32 0
  %15 = call i32 @EXTRACT_16BITS(i32* %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = inttoptr i64 %18 to i32*
  %20 = call i32 @ND_PRINT(i32* %19)
  br label %24

21:                                               ; No predecessors!
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @ND_PRINT(i32* bitcast ([10 x i8]* @.str.1 to i32*))
  br label %24

24:                                               ; preds = %21, %2
  ret void
}

declare dso_local i32 @ND_TCHECK(i32) #1

declare dso_local i32 @EXTRACT_16BITS(i32*) #1

declare dso_local i32 @ND_PRINT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
